// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollWrapper /> ContainVertical story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="h-[200px] w-[200px] bg-utility-default-noEmphasis-hover"
  >
    <div
      class="scroll-wrapper scroll-wrapper--orientation-vertical scroll-wrapper--shadow-type-contain"
    >
      <div
        class="scroll-wrapper__inner"
        tabindex="0"
      >
        <div
          class="h-[300px] w-[300px]"
          data-testid="scrollContent"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ScrollWrapper /> Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="h-[200px] w-[200px] bg-utility-default-noEmphasis-hover"
  >
    <div
      class="scroll-wrapper scroll-wrapper--orientation-vertical scroll-wrapper--shadow-type-cover"
    >
      <div
        class="scroll-wrapper__inner"
        tabindex="0"
      >
        <div
          class="h-[300px] w-[300px] p-spacing-size-3"
          data-testid="scrollContent"
        />
      </div>
    </div>
  </div>
</div>
`;
